# crowd_varnet

./: .gitignore  pyproject.toml
benchmark/: __init__.py  config.py  data_loader.py  methods.py  metrics.py  obs_generator.py  run_arch_comparison.py  run_benchmark.py  run_ensemble_eval.py  run_final_eval.py  run_teacher_compare.py
crowd_varnet/: __init__.py  __main__.py  assimilation_model.py  compare_teacher_cli.py  core.py  eval_rollout_baselines.py  infer_cli.py  param_audit.py  paths.py  pedpred_infer_cli.py  pedpred_infer_plot.py  pedpred_teacher_config.py  pedpred_teacher_train.py  rollout_infer_cli.py  rollout_train_cli.py  train_cli.py
data/: README.txt
docs/: architecture.tex  architecture_doc.tex  experiments_log.md
sbatch/: inc_atc_data_env.sh  inc_cvn_root.sh  inc_venv.sh  run_compare_teacher_crowd_varnet_gpu_debug.sbatch  run_cvn_ensemble_v7.sbatch  run_cvn_ensemble_v8_lstm.sbatch  run_cvn_g1_lrgrad.sbatch  run_cvn_g2_axial.sbatch  run_cvn_g3_axial_lrgrad.sbatch  run_cvn_p2a_eval_full.sbatch  run_cvn_p2a_v13_teacher.sbatch  run_cvn_p3_v13_horizon.sbatch  run_cvn_student_ensemble.sbatch  run_cvn_student_their_teacher.sbatch  run_cvn_student_their_teacher_debug.sbatch  run_cvn_student_v13_continuous.sbatch  run_cvn_their_teacher_new_arch.sbatch  run_cvn_v10_unobs.sbatch  run_cvn_v11_4dvar_grad.sbatch  run_cvn_v12_unobs_weight.sbatch  run_cvn_v13_gru_mid_nlll.sbatch  run_cvn_v13_unfreeze_tail.sbatch  run_cvn_v14_sched_sampling.sbatch  run_cvn_v14_their_teacher.sbatch  run_cvn_v15_obs_token.sbatch  run_cvn_v16_combo.sbatch  run_cvn_v18_debug.sbatch  (+15 more)
(+39 files in other folders)
